# kindle-tetris

./: .gitignore  README.md  build_kindlehf.sh  build_pc.sh  meson.build  meson.options
src/: main.cpp
src/components/: tetris_board.cpp  tetris_board.hpp  tetris_game.cpp
src/include/: config.hpp  tetris_game.hpp
tetris/: config.xml  menu.json
